# Workplace-Meow

./: LIVE2D_MODELS.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: build-release.yml  release.yml
old-code/: .gitignore  SYSTEM_FEATURES.md  USAGE.md  metadata.json
old-code/.github/workflows/: build-release.yml
old-code/src/: App.tsx  index.css
old-code/src-tauri/: tauri.conf.json
old-code/src-tauri/src/: main.rs
old-code/src/components/: BongoCat.tsx  DebugOverlay.tsx  Live2DPet.tsx
old-code/src/hooks/: useActivityMonitoring.ts  useModel.ts
old-code/src/lib/: ai-providers.ts
old-code/src/pages/: ChatWindow.tsx
old-code/src/utils/: debug-log.ts  live2d-manager.ts  load-live2d-scripts.ts
scripts/: build-windows.sh  gen_ico.py
src/: App.tsx  constants.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/models/爱莉希雅 · 标准模式/: cat.model3.json  cat.physics3.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/utils/: mod.rs  screenshot.rs  settings.rs
src/components/: Live2DPet.tsx
src/composables/: useActivityMonitoring.ts  useChatReaction.ts  useSharedMenu.ts  useSystemMonitor.ts
src/hooks/: useModel.ts  useMouseTracking.ts  useSystemMonitor.ts
src/lib/: ai-providers.ts  sentiment-analysis.ts
src/pages/: ChatWindow.tsx  Settings.tsx
src/pages/chat/: index.vue
src/pages/main/: index.vue
src/pages/preference/: index.vue
src/plugins/: window.ts
src/utils/: ai-providers.ts  live2d-manager.ts
(+2 files in other folders)
